--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.lyhnx</groupId>
 	<artifactId>bittrex-api-wrapper</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	
 	<name>Bittrex API Wrapper</name>
 	<description>Easy to use wrapper for the Bittrex.com api</description>
+	<url>https://github.com/Lyhnx/bittrex-api-wrapper.git</url>
 	
 	<licenses>
 		<license>
@@ -13,9 +14,14 @@
 			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
 		</license>
 	</licenses>
-
+	
+	<scm>
+		<url>https://github.com/Lyhnx/bittrex-api-wrapper.git</url>
+	</scm>
+	
 	<developers>
 		<developer>
+			<name>Lyhnx</name>
 			<email>lyhnxdev@gmail.com</email>
 			<url>https://github.com/Lyhnx</url>
 		</developer>
@@ -32,8 +38,77 @@
 			        <target>1.8</target>
 			    </configuration>
 			</plugin>
+		    <plugin>
+	      		<groupId>org.sonatype.plugins</groupId>
+		      	<artifactId>nexus-staging-maven-plugin</artifactId>
+		      	<version>1.6.7</version>
+		      	<extensions>true</extensions>
+		      	<configuration>
+		        	<serverId>ossrh</serverId>
+		        	<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+		        	<autoReleaseAfterClose>true</autoReleaseAfterClose>
+		      </configuration>
+		    </plugin>
+		    <plugin>
+        		<groupId>org.apache.maven.plugins</groupId>
+        		<artifactId>maven-gpg-plugin</artifactId>
+        		<executions>
+        			<execution>
+           				<id>sign-artifacts</id>
+						<phase>verify</phase>
+       					<goals>
+        					<goal>sign</goal>
+          				</goals>
+          				<!-- Configuration prevents passphrase prompt -->
+     				    <configuration>
+                			<gpgArguments>
+                    			<arg>--pinentry-mode</arg>
+                    			<arg>loopback</arg>
+                			</gpgArguments>
+            			</configuration>
+          			</execution>
+        		</executions>
+      		</plugin>
+      		<plugin>
+	      		<groupId>org.apache.maven.plugins</groupId>
+	      		<artifactId>maven-source-plugin</artifactId>
+	      		<version>2.2.1</version>
+      			<executions>
+	        		<execution>
+          				<id>attach-sources</id>
+        	 			<goals>
+	            			<goal>jar-no-fork</goal>
+	          			</goals>
+	        		</execution>
+	      		</executions>
+   			</plugin>
+	    	<plugin>
+	      		<groupId>org.apache.maven.plugins</groupId>
+	      		<artifactId>maven-javadoc-plugin</artifactId>
+	      		<version>2.9.1</version>
+	      		<executions>
+	        		<execution>
+          			<id>attach-javadocs</id>
+	          		<goals>
+            			<goal>jar</goal>
+	          		</goals>
+	        		</execution>
+	      		</executions>
+	    	</plugin>
 		</plugins>
 	</build>
+	
+	<distributionManagement>
+  		<snapshotRepository>
+	    	<id>ossrh</id>
+	    	<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+	  	</snapshotRepository>
+	  	<repository>
+	    	<id>ossrh</id>
+	    	<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+	  	</repository>
+	</distributionManagement>
+	
 	<!--  Dependencies -->
 	<dependencies>
 		<dependency>
@@ -72,6 +147,14 @@
 		    <artifactId>wiremock</artifactId>
 		    <version>1.18</version>
 		    <scope>test</scope>
-		</dependency>	
+		</dependency>
+		
+		<dependency>
+		    <groupId>junit</groupId>
+		    <artifactId>junit</artifactId>
+		    <version>4.12</version>
+		    <scope>test</scope>
+		</dependency>
+			
 	</dependencies>
 </project>
